--- a/server/package.json
+++ b/server/package.json
@@ -11,11 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
+    "dotenv": "16.4.5",
     "express": "^4.18.1",
-    "mongoose": "^6.3.6",
-    "nodemon": "^2.0.16"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^6.4.0",
+    "nodemon": "2.0.22",
+    "server": "file:"
   }
 }
