--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
     "metrics-performance-tracker": "file:",
+    "moment-timezone": "^0.5.47",
     "mongoose": "^6.4.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "2.0.22",
